update document register new user
