# docs/swagger.json
@@ -4,31 +4,7 @@
         "contact": {}
     },
     "paths": {
-        "/api/health": {
-            "get": {
-                "description": "HealthCheck status is ready of service",
-                "tags": [
-                    "HealthCheck"
-                ],
-                "summary": "HealthCheck",
-                "operationId": "HealthCheck",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/common.Response"
-                        }
-                    },
-                    "500": {
-                        "description": "Internal Server Error",
-                        "schema": {
-                            "$ref": "#/definitions/common.Response"
-                        }
-                    }
-                }
-            }
-        },
-        "/auth/register": {
+        "/api/auth/register": {
             "post": {
                 "description": "Register new user",
                 "consumes": [
@@ -49,7 +25,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/users.CreateUser"
+                            "$ref": "#/definitions/auth.CreateUser"
                         }
                     }
                 ],
@@ -74,22 +50,34 @@
                     }
                 }
             }
+        },
+        "/api/health": {
+            "get": {
+                "description": "HealthCheck status is ready of service",
+                "tags": [
+                    "HealthCheck"
+                ],
+                "summary": "HealthCheck",
+                "operationId": "HealthCheck",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/common.Response"
+                        }
+                    }
+                }
+            }
         }
     },
     "definitions": {
-        "common.Response": {
-            "type": "object",
-            "properties": {
-                "code": {
-                    "type": "integer"
-                },
-                "data": {},
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "users.CreateUser": {
+        "auth.CreateUser": {
             "type": "object",
             "properties": {
                 "email": {
@@ -102,6 +90,18 @@
                     "type": "string"
                 },
                 "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "common.Response": {
+            "type": "object",
+            "properties": {
+                "code": {
+                    "type": "integer"
+                },
+                "data": {},
+                "message": {
                     "type": "string"
                 }
             }
